--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,7 +30,8 @@ body{
 }
 
 .header .navbar {
-  background-color: transparent;
+  // background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.3);
 
 }
 
@@ -69,8 +70,24 @@ textarea {
 }
 
 .fondoTitulo {
-    background-color: #009068;
+    background-color: rgba(0, 144, 104, 0.7);
     width: 100%;
+    transition: 0.5s ease;
+}
+
+.fondoTitulo.scrolled {
+    background-color: transparent !important;
+}
+
+.relativo {
+    position: relative;
+    // border: 3px solid white;
+}
+
+.absoluto {
+    position: absolute;
+    top: 60%;
+    right: 0px;
 }
 
 .titulo {    
@@ -80,6 +97,11 @@ textarea {
     text-align: center;
     // display: table-cell;
     vertical-align: middle;
+    transition: 0.5s ease;
+}
+
+.titulo.scrolled{
+    color: transparent !important;
 }
 
 .titulo2 {    
@@ -124,14 +146,20 @@ textarea {
 .tituloSobre{
     font-size: 45px;
     // color: #03b7ff;
-    color: #0193fa;
+    // color: #0193fa;
+    color: #fff;
     margin: 0px;
     text-align: center;
     display: table-cell;
     vertical-align: middle;
     font-weight: bold;
     letter-spacing: 2px;
+    transition: 0.5s ease;
 }
+
+// .tituloSobre.scrolled {
+//     color: #fff;
+// }
 
 .tituloSol2 {
     font-size: 45px;
@@ -328,7 +356,7 @@ footer {
 }
 
 .box1{
-    background-image: url(../Img/fondo1.png);
+    background-image: url(../Img/fondoWebAlt_lg.png);
     height: 100%;    
     -webkit-background-size: cover;
          -o-background-size: cover;
@@ -373,15 +401,96 @@ footer {
     background-attachment: fixed;
 }
 
-// cuando es mayor a 768
-@media only screen and (min-width: 768px) {
-    .ocultarGrande {
+.ocultarlg {
+    // visibility: hidden;
+    display: none;
+}
+
+// #scroll-down {
+//   width: 30px;
+//   height: 50px;
+//   border-radius: 30px;
+//   border: 2px solid #fff;
+//   position: absolute;
+//   bottom: 50px;
+//   left: calc(50% - 15px);
+//   z-index: 9999;
+//   cursor: pointer;
+//   border-bottom: 2px solid #fff !important;
+// }
+
+// #scroll-down::after {
+//   content: '';
+//   width: 6px;
+//   height: 6px;
+//   border-radius: 50%;
+//   background: #fff;
+//   display: block;
+//   position: absolute;
+//   top: 5px;
+//   left: 10px;
+//   -webkit-animation: fade 2s infinite;
+//   animation: fade 2s infinite;
+// }
+
+.scroll-down {
+  height: 50px;
+  width: 30px;
+  border: 2px solid white;
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.scroll-down::before,
+.scroll-down::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border: 2px solid white;
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before {
+  top: 30%;
+  animation-delay: 0.3s;
+  /* animation: scroll-down 1s ease-in-out infinite; */
+}
+
+@keyframes scroll-down {
+  0% {
+    /* top:20%; */
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
+  }
+}
+
+// cuando es mayor a 1025
+@media only screen and (min-width: 1025px) {
+    .noMostrarMas1024 {
         display: none;
     }
 }
+
+// menor 1024
 @media only screen and (max-width: 1024px) {
     .box1 {
-        background-image: url(../Img/fondoAlt.png);
+        background-image: url(../Img/fondoDNmovil_lg.png);
             height: 100%;    
         -webkit-background-size: cover;
              -o-background-size: cover;
@@ -390,12 +499,31 @@ footer {
         background-repeat: no-repeat;    
         background-attachment: fixed;
     }
+
+    .ocultarMenor1024 {
+        // visibility: hidden;
+        display: none;
+    }
+
+    // .vista1024 {
+    //     visibility: visible;
+    // }
 }
 
+// cuando es mayor a 768
+@media only screen and (min-width: 768px) {
+    .ocultarGrande {
+        display: none;
+    }
+
+    .noMostrarMas768 {
+        display: none;
+    }
+}
 //cuando es menor a 768
 @media only screen and (max-width: 768px) {
     .box1 {
-        background-image: url(../Img/fondoAlt.png);
+        background-image: url(../Img/fondoDNmovil_md.png);
             height: 100%;    
         -webkit-background-size: cover;
              -o-background-size: cover;
@@ -434,13 +562,13 @@ footer {
         text-align: center;
     }
 
-    .barra {         
+    .barra {
         border-bottom: 1px solid white;
         color: #fff;
     }
 
     .titulo {
-       background-color: #009068;
+       // background-color: #009068;
        font-size: 40px;       
        text-align: center;
     }
@@ -466,16 +594,34 @@ footer {
         color: #fff;
     }
 
+    .tituloc {
+        color: #004085;
+    }
+
+    .tituloSobre {
+        color: #fff;
+    }
+    .noMostrarMenor768 {
+       display: none;
+    }
+}
+
+/*Cuando la pantalla es mas de 576*/
+@media only screen and (min-width: 576px) {
+  .noMostrarMas576 {
+    display: none;
+  }
+
 }
 
 //cuando es menor a 576
 @media only screen and (max-width: 576px) {    
     .box1 {
-        background-image: url(../Img/fondoAlt.png);
+        background-image: url(../Img/fondoDNmovil2_sm.png);
             height: 100%;    
-        -webkit-background-size: cover;
-             -o-background-size: cover;
-                background-size: cover;
+        // -webkit-background-size: cover;
+        //      -o-background-size: cover;
+        //         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;    
         background-attachment: fixed;
@@ -483,6 +629,10 @@ footer {
 
     body {
         font-size: 14px;
+    }
+
+    .noMostrarMenor576 {
+        display: none;
     }
 
     .ocultarChico{
@@ -527,7 +677,7 @@ footer {
     }
 
     .titulo {
-       background-color: #009068;
+       // background-color: #009068;
        font-size: 40px;       
        text-align: center;
     }
@@ -614,6 +764,18 @@ footer {
     }
 }
 
+@media screen and (max-width: 768px) and (min-width: 576px) {
+  .noMostrar576768 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .noMostrar7691024 {
+    display: none;
+  }
+}
+
 .pth {
     padding-top: 7.5px;
 }
@@ -645,3 +807,4 @@ footer {
 // .mlh {
 //     margin-left: 7.5px;
 // }
+
