--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,10 +14,17 @@ html{
 }
 
 body{
+    position: relative;
     font-family: fuenteAlter;
     height: 100%;
     margin: 0;
     padding: 0;
+}
+
+.active  {
+
+  background-color: transparent !important;
+
 }
 
 .logoBlancoMenu {
@@ -807,4 +814,23 @@ footer {
 // .mlh {
 //     margin-left: 7.5px;
 // }
+
+.float1{
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    box-shadow: 2px 2px 3px #2f4f4f;
+    z-index:100;
+}
+
+.my-float{
+    margin-top:16px;
+}
 
