modificaciones en la Navbar para que indique en que sección se encuentra y bugs de visualizacion, ademas Blog actualizado con 2 entradas para el mes de marzo

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,9 +22,11 @@ body{
 }
 
 .active  {
-
   background-color: transparent !important;
+}
 
+.citasBlogFont {
+    font-size: 0.7rem;
 }
 
 .logoBlancoMenu {
@@ -518,7 +520,7 @@ footer {
 }
 
 // cuando es mayor a 768
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
     .ocultarGrande {
         display: none;
     }
