--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -365,7 +365,7 @@ footer {
 }
 
 .box1{
-    background-image: url(../Img/fondoWebAlt_lg.png);
+    background-image: url(../Img/fondoWebAlt_xl.webp);
     height: 100%;    
     -webkit-background-size: cover;
          -o-background-size: cover;
@@ -377,7 +377,7 @@ footer {
 
 .box2{
     height: 40%;    
-    background-image: url(../Img/fondo2.png);
+    background-image: url(../Img/fondo2.webp);
     -webkit-background-size: cover;
          -o-background-size: cover;
             background-size: cover;
@@ -388,7 +388,7 @@ footer {
 
 .box3{
     height: 40%;
-    background-image: url(../Img/fondo3.png);
+    background-image: url(../Img/fondo3.webp);
     -webkit-background-size: cover;
          -o-background-size: cover;
             background-size: cover;
@@ -400,7 +400,7 @@ footer {
 
 .box4{
     height: 40%;
-    background-image: url(../Img/fondo4-2.png);
+    background-image: url(../Img/fondo4-2.webp);
     -webkit-background-size: cover;
          -o-background-size: cover;
             background-size: cover;
@@ -499,7 +499,7 @@ footer {
 // menor 1024
 @media only screen and (max-width: 1024px) {
     .box1 {
-        background-image: url(../Img/fondoDNmovil_lg.png);
+        background-image: url(../Img/fondoDNmovil_lg.webp);
             height: 100%;    
         -webkit-background-size: cover;
              -o-background-size: cover;
@@ -509,18 +509,13 @@ footer {
         background-attachment: fixed;
     }
 
-    .ocultarMenor1024 {
-        // visibility: hidden;
+    .noMostrarMenor1024 {
         display: none;
     }
-
-    // .vista1024 {
-    //     visibility: visible;
-    // }
 }
 
 // cuando es mayor a 768
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 768px) {
     .ocultarGrande {
         display: none;
     }
@@ -532,7 +527,7 @@ footer {
 //cuando es menor a 768
 @media only screen and (max-width: 768px) {
     .box1 {
-        background-image: url(../Img/fondoDNmovil_md.png);
+        background-image: url(../Img/fondoDNmovil_md.webp);
             height: 100%;    
         -webkit-background-size: cover;
              -o-background-size: cover;
@@ -544,7 +539,6 @@ footer {
 
     .box1, .box2, .box3, .box4 {
         background-attachment: scroll;
-        // height: 70%;
     }
 
     .logoDevAnt {
@@ -616,7 +610,7 @@ footer {
 }
 
 /*Cuando la pantalla es mas de 576*/
-@media only screen and (min-width: 576px) {
+@media only screen and (min-width: 577px) {
   .noMostrarMas576 {
     display: none;
   }
@@ -626,7 +620,7 @@ footer {
 //cuando es menor a 576
 @media only screen and (max-width: 576px) {    
     .box1 {
-        background-image: url(../Img/fondoDNmovil2_sm.png);
+        background-image: url(../Img/fondoDNmovil2_sm.webp);
             height: 100%;    
         // -webkit-background-size: cover;
         //      -o-background-size: cover;
@@ -644,9 +638,6 @@ footer {
         display: none;
     }
 
-    .ocultarChico{
-        display: none;
-    }
     .logoBlancoMenu {
         width: 15%;
     }
@@ -783,6 +774,18 @@ footer {
   .noMostrar7691024 {
     display: none;
   }
+}
+
+@media screen and (max-width: 767px) and (min-width: 577px) {
+  .noMostrar577767 {
+    display: none;
+  }
+}
+//menos de 400px
+@media only screen and (max-width: 400px) {
+    .noMostrarMenor400 {
+        display: none;
+    }
 }
 
 .pth {
