se separa el blog

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -183,21 +183,21 @@ textarea {
 }
 
 .aplicaciones {
-    background: url(../Img/icons222.png) -954px -570px;
+    background: url(../Img/icons222.webp) -954px -570px;
     width: 130px;
     height: 130px;
     color: #fff;
 }
 
 .mantenimiento {
-    background: url(../Img/icons333.png) -190px -190px;
+    background: url(../Img/icons333.webp) -190px -190px;
     width: 130px;
     height: 130px;
     color: #fff;
 }
 
 .consultoria {
-    background: url(../Img/icons333.png) -954px -572px;
+    background: url(../Img/icons333.webp) -954px -572px;
     width: 130px;
     height: 130px;
     color: #fff;
@@ -240,21 +240,21 @@ textarea {
 }
 
 .appWeb {
-    background:url(../Img/icons333.png) 0px -380px;
+    background:url(../Img/icons333.webp) 0px -380px;
     width: 130px;
     height: 130px;
     color: #fff;
 }
 
 .appMov {
-    background:url(../Img/icons333.png) 0px -572px;
+    background:url(../Img/icons333.webp) 0px -572px;
     width: 130px;
     height: 130px;
     color: #fff;   
 }
 
 .webSite {
-    background:url(../Img/icons222.png) -955px 1px;
+    background:url(../Img/icons222.webp) -955px 1px;
     width: 130px;
     height: 130px;
     color: #fff; 
@@ -272,28 +272,28 @@ textarea {
 }
 
 .quienSomos {
-    background:url(../Img/icons222.png) 130px 150px;
+    background:url(../Img/icons222.webp) 130px 150px;
     width: 130px;
     height: 130px;
     color: #fff;
 }
 
 .vision {
-    background:url(../Img/icons222.png) -380px -190px;
+    background:url(../Img/icons222.webp) -380px -190px;
     width: 130px;
     height: 130px;
     color: #fff;   
 }
 
 .mision {
-    background:url(../Img/icons222.png) -380px -570px;
+    background:url(../Img/icons222.webp) -380px -570px;
     width: 130px;
     height: 130px;
     color: #fff;   
 }
 
 .tecnologia {
-    background:url(../Img/icons222.png) -573px -574px;
+    background:url(../Img/icons222.webp) -573px -574px;
     width: 130px;
     height: 130px;
     color: #fff;   
