se actualizan los formatos del blog

--- a/src/scss/blogStyle.scss
+++ b/src/scss/blogStyle.scss
@@ -31,12 +31,12 @@
 // portada del post
 .portadaXl{
     background-image: url(../Img/fondoWebAlt_xl.webp);
-    // background: url('../../Img/postImg/hosting-servidoresXl.jpg');
+    // background: url('/Img/postImg/hosting-servidoresXl.jpg');
 
 }
 
 .portadaMed {
-    background-image: url('../../Img/postImg/hosting-servidoresXl.jpg');
+    background-image: url('/Img/postImg/hosting-servidoresXl.jpg');
 }
 
 .circuloBull {
